# mongoexport

./: LICENSE  MANIFEST.in  Makefile  README.md  mongo_export.py  pyproject.toml  setup.py
.github/workflows/: mirror-codeberg.yml  publish.yml
mongocollector/: exporter.py  logging_config.py
mongoexport/: __init__.py  __main__.py  cli.py
