[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongoexport"
version = "0.1.1"
description = "Export data from MongoDB collections with pagination, delays, and retry logic"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Javier Parada", email = "javierparada@pm.me"},
]
requires-python = ">=3.8"
dependencies = [
    "pymongo>=3.12.0",
]
keywords = ["mongodb", "export", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/n1nj4t4nuk1/mongoexport"
Documentation = "https://github.com/n1nj4t4nuk1/mongoexport#readme"
Repository = "https://github.com/n1nj4t4nuk1/mongoexport"
Issues = "https://github.com/n1nj4t4nuk1/mongoexport/issues"

[project.scripts]
mongoexport = "mongoexport.cli:main"

[tool.setuptools]
packages = ["mongoexport"]
